--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Build
       run: |
-        npm build
+        npm run build
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@3.7.1
